--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "windows-terminal",
 	"displayName": "Windows Terminal Integration",
 	"description": "VS Code integration with Windows Terminal",
-	"version": "0.1.0",
+  "version": "0.1.0",
+  "icon": "images/icon.png",
 	"author": {
 		"name": "Daniel Imms"
 	},
