--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "vscode-test": "^1.3.0"
   },
   "dependencies": {
-    "jsonc-parser": "^2.2.1"
+    "jsonc-parser": "^2.2.1",
+    "ssh-config": "^4.0.2"
   }
 }
