Make reuseExistingWindow the default

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
         },
         "windowsTerminal.reuseExistingWindow": {
           "type": "boolean",
-          "default": false,
+          "default": true,
           "description": "Whether to reuse an existing Windows Terminal window."
         },
         "windowsTerminal.explorer.showOpen": {
